--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "node-openssl-cert",
-  "version": "0.1.26",
+  "version": "0.1.27",
   "description": "Node.JS OpenSSL wrapper",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "dependencies": {
+    "crypto-random-string": "^3.3.1",
     "moment": "^2.22.1",
     "tmp": "^0.0.33"
   },
